<?xml version="1.0"?>
<package format="2">
  <name>my_util_scripts</name>
  <version>0.1.0</version>
  <description>my_util_scripts package</description>

  <maintainer email="naoki.mizuno.256@gmail.com">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/naoki-mizuno/my_util_scripts</url>

  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
